# CMakeGTestSample

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  example.cpp  example.h  main.cpp
test/: CMakeLists.txt  test_main.cpp
